--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,20 +6,13 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    /* Resolución de módulos */
-    "moduleResolution": "node",
+    /* Bundler mode */
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Rutas absolutas */
-    "baseUrl": "./src",
-    "paths": {
-      "@services/*": ["services/*"],
-      "@components/*": ["components/*"]
-    },
 
     /* Linting */
     "strict": true,
@@ -27,6 +20,5 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"]
 }
