--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^6.1.2",
     "@mui/x-charts": "^7.18.0",
     "@mui/x-data-grid": "^7.19.0",
+    "@react-pdf/renderer": "^4.1.5",
     "@react-spring/web": "^9.7.5",
     "@remixicon/react": "^4.2.0",
     "@types/styled-components": "^5.1.34",
@@ -22,6 +23,8 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -39,7 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
