--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.9",
     "@mui/styled-engine-sc": "^6.1.2",
     "@mui/x-charts": "^7.18.0",
-    "@mui/x-data-grid": "^7.19.0",
+    "@mui/x-data-grid": "^7.23.0",
     "@react-pdf/renderer": "^4.1.5",
     "@react-spring/web": "^9.7.5",
     "@remixicon/react": "^4.2.0",
