--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-tooltip": "^5.28.0",
     "reactstrap": "^9.2.3",
     "remixicon": "^4.3.0",
     "styled-components": "^6.1.13",
