Rediseño de pagina

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.9",
     "@mui/styled-engine-sc": "^6.1.2",
-    "@mui/x-charts": "^7.18.0",
+    "@mui/x-charts": "^7.25.0",
     "@mui/x-data-grid": "^7.23.0",
     "@react-pdf/renderer": "^4.1.5",
     "@react-spring/web": "^9.7.5",
@@ -24,11 +24,14 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "clsx": "^2.1.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.10.9",
+    "react-bootstrap-buttons": "^1.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.3.1",
@@ -38,13 +41,14 @@
     "react-router-dom": "^6.27.0",
     "reactstrap": "^9.2.3",
     "remixicon": "^4.3.0",
-    "styled-components": "^6.1.13",
-    "sweetalert2": "^11.14.1"
+    "styled-components": "^6.1.15",
+    "sweetalert2": "^11.14.1",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
@@ -52,10 +56,10 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.1",
     "sass-embedded": "^1.79.4",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   },
